--- a/screens/mymain.kv
+++ b/screens/mymain.kv
@@ -70,7 +70,7 @@ WindowManager
             size_hint:(.1,None)
             height:(root.height)*0.05*1
             Label
-                text:"Tarifa x día"
+                text:'Tarifa x día'
             TextInput
                 id: tarifa
                 multiline:False
