--- a/Calculador_de_Vuelos/mainMD/main.kv
+++ b/Calculador_de_Vuelos/mainMD/main.kv
@@ -287,7 +287,7 @@
                     MDBoxLayout
                         size_hint:(None,.1)
                         width:(root.width)*0.01
-                        
+
                     MyTextInput:
                         id:hectareas_max
                         multiline:False
@@ -355,7 +355,7 @@
 
 
             Button
-                text: "Return"
+                text: "Regresar"
                 on_press:
                     # root.btn()
                     root.manager.current = 'main'
