--- a/Calculador_de_Vuelos/mainMD/main.kv
+++ b/Calculador_de_Vuelos/mainMD/main.kv
@@ -4,7 +4,9 @@
     halign: "center"
     valign: 'center'
     # font_style: 'H1'
-    # color: 0,0,0,1
+    # color: 0,0,0,
+    theme_text_color: "Custom"
+    text_color: 1, 1, 1, 1
     md_bg_color: app.theme_cls.primary_dark
 <MyTextInput@MDTextFieldRect>:
     input_filter: 'float'
@@ -113,7 +115,7 @@
                     size_hint:(.1,None)
                     height:(root.height)*0.05*1
                     MyLabel:
-                        text:"Tarifa x día"
+                        text:"Tarifa x dia"
                     MyTextInput:
                         id: tarifa
                         multiline:False
@@ -122,7 +124,7 @@
                     size_hint:(.1,None)
                     height:(root.height)*0.05*3
                     MyLabel:
-                        text:"Geografía ha/día"
+                        text:"Geografia ha/dia"
                     MDBoxLayout
                         MyLabel:
                             text:"% Zona Plana"
@@ -247,7 +249,7 @@
                 size_hint:(.1,None)
                 height:(root.height)*0.05*1
                 MyLabel:
-                    text:"Rendimiento día/ha"
+                    text:"Rendimiento dia/ha"
                 MyTextInput:
                     id:rend_tarifa
                     multiline:False
@@ -315,7 +317,7 @@
                 size_hint:(.1,None)
                 height:(root.height)*0.05*1
                 MyLabel:
-                    text:"Días"
+                    text:"Dias"
                 MyTextInput:
                     id:dias
                     multiline:False
