--- a/Calculador_de_Vuelos/mainMD/main.kv
+++ b/Calculador_de_Vuelos/mainMD/main.kv
@@ -81,7 +81,7 @@
                             id: altura
                             multiline: False
                             cursor_width: 3
-
+                            on_text_validate: tarifa.focus = True
                     MDBoxLayout
                         size_hint:(None,.1)
                         width:(root.width)*0.01
@@ -119,6 +119,7 @@
                     MyTextInput:
                         id: tarifa
                         multiline:False
+                        on_text_validate: zona_plana.focus = True
                 MDBoxLayout
                     orientation: "vertical"
                     size_hint:(.1,None)
@@ -134,6 +135,7 @@
                         MyTextInput:
                             id: zona_plana
                             multiline:False
+                            on_text_validate: rend_estd.focus = True
                         MDBoxLayout
                             size_hint:(None,.1)
                             width:(root.width)*0.01
@@ -156,7 +158,7 @@
                         MyTextInput:
                             id: rend_estd
                             multiline:False
-
+                            on_text_validate: peso.focus = True
                         MDBoxLayout
                             size_hint:(None,.1)
                             width:(root.width)*0.01
